[gd_scene load_steps=2 format=2]

[ext_resource path="res://UI/LoginScreen.gd" type="Script" id=1]

[node name="LoginScreen" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 0.887695
margin_right = 0.887695
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Panel" type="Panel" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -133.0
margin_top = -164.0
margin_right = 133.0
margin_bottom = 164.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="Panel"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 10.0
margin_top = 10.0
margin_right = -10.0
margin_bottom = -10.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Title" type="Label" parent="Panel/VBoxContainer"]
margin_top = -1.0
margin_right = 246.0
margin_bottom = 99.0
rect_min_size = Vector2( 0, 100 )
text = "Login Screen"
align = 1
valign = 1

[node name="UsernameTitle" type="Label" parent="Panel/VBoxContainer"]
margin_top = 104.0
margin_right = 246.0
margin_bottom = 118.0
text = "Username"
valign = 1

[node name="UsernameEdit" type="LineEdit" parent="Panel/VBoxContainer"]
margin_top = 122.0
margin_right = 246.0
margin_bottom = 146.0

[node name="PasswordTitle" type="Label" parent="Panel/VBoxContainer"]
margin_top = 150.0
margin_right = 246.0
margin_bottom = 164.0
text = "Password"
valign = 1

[node name="PasswordEdit" type="LineEdit" parent="Panel/VBoxContainer"]
margin_top = 168.0
margin_right = 246.0
margin_bottom = 192.0
secret = true

[node name="LoginButton" type="Button" parent="Panel/VBoxContainer"]
margin_top = 196.0
margin_right = 246.0
margin_bottom = 246.0
rect_min_size = Vector2( 0, 50 )
text = "Login"

[node name="CreateAccountButton" type="Button" parent="Panel/VBoxContainer"]
margin_top = 250.0
margin_right = 246.0
margin_bottom = 300.0
rect_min_size = Vector2( 0, 50 )
text = "Create Account"
